# PyMender

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml  test.yml
pymender/: cli.py
pymender/commands/: fastapi_annotated.py  move_package.py
pymender/commands/tests/: test_fastapi_annotated.py  test_move_package.py
