[project]
name = "pymender"
version = "0.2.0"
authors = [
    { name="Daniel Hails", email="pymender@hails.info" },
]
description = "Mend your Python projects with reproducible refactors"
requires-python = ">=3.10"
dynamic = ["dependencies", "readme"]

[project.urls]
"Homepage" = "https://github.com/DJRHails/pymender"
"Bug Tracker" = "https://github.com/DJRHails/pymender/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters


[project.scripts]
pymender = "pymender.cli:main"

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "{version}",
]

